--- a/scores.html
+++ b/scores.html
@@ -19,7 +19,7 @@
 
         <main>
             <hr/>
-            <h2> Scores </h2>
+            <h2> Score Board </h2>
             <table>
                 <thead>
                     <tr>
