--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@
     <body>
         <header>
             <nav>
-                <a href="index.html">Home</a> |
-                <a href="play.html">Play</a> |
-                <a href="scores.html">Score Board</a> |
-                <a href="about.html">About</a>
+                <a href="./">Home</a> |
+                <a href="./play.html">Play</a> |
+                <a href="./scores.html">Score Board</a> |
+                <a href="./about.html">About</a>
             </nav>
             <h1>Simon Says</h1>
         </header>
