--- a/play.html
+++ b/play.html
@@ -7,52 +7,65 @@
         <link rel="icon" href="./favicon.ico" />
 
         <link rel="stylesheet" href="main.css" />
+
+        <!-- Include bootstrap CSS framework -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+            crossorigin="anonymous"
+        />
     </head>
-    <body>
-        <header>
-            <nav>
-                <a href="./">Home</a> |
-                <a href="./play.html">Play</a> |
-                <a href="./scores.html">Score Board</a> |
-                <a href="./about.html">About</a>
+
+
+    <body class="bg-dark text-light">
+        <header class="container-fluid">
+            <nav class="navbar fixed-top navbar-dark">
+              <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
+              <menu class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                     <a class="nav-link active" href="play.html">Play</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="scores.html">Scores</a>
+                </li>
+                <li class="nav-item">
+                     <a class="nav-link" href="about.html">About</a>
+                </li>
+              </menu>
             </nav>
-            <h1>Simon Says</h1>
-        </header>
+          </header>
 
-        <main>
-            <hr/>
-            <div class="player">
-                <span> Player: </span>
-                <span class="player-name"> Guest </span>
+          <main class="bg-secondary">
+            <div class="players">
+              Player:
+              <span class="player-name">Guest</span>
             </div>
-            <br/>
-            <div>
-                <label for="count">Score</label>
-                <input type="text" id="count" value="---" readonly />
+            <div class="game">
+              <div class="button-container">
+                <button class="button-top-left"></button>
+                <button class="button-top-right"></button>
+                <button class="button-bottom-left"></button>
+                <button class="button-bottom-right"></button>
+                <div class="controls center">
+                  <div class="game-name">Simon<sup>&reg;</sup></div>
+                  <div class="score center">--</div>
+                  <button class="btn btn-primary">Reset</button>
+                </div>
+              </div>
             </div>
-            <br/>
-            <div>
-                <button> Reset </button>
-            </div>
-            <br>
-            <div>
-                <svg width="220" height="220" viewBox="0 0 220 220">
-                    <g transform="translate(110,110)" stroke="#000" stroke-width="3">
-                        <path d="M0,0 L0,-100  A100,100 0 0,1  100,0  z" style="fill:red;"/>
-                        <path d="M0,0 L100,0  A100,100 0 0,1  0,100  z" style="fill:green"/>
-                        <path d="M0,0 L0,100  A100,100 0 0,1  -100,0  z" style="fill:blue"/>
-                        <path d="M0,0 L-100,0  A100,100 0 0,1  0,-100  z" style="fill:yellow"/>
-                       </g>
-                  </svg>
-            </div>
-            
-        </main>
+          </main>
 
-        <footer>
-            <hr/>
-            <span>Author(s) </span>
-            <br/>
-            <a href="https://github.com/n8petersen/simon">GitHub</a>
+        <footer class="bg-dark text-dark text-muted">
+            <div class="container-fluid">
+                <span class="text-reset">Nathan Petersen</span>
+                <a class="text-reset" href="https://github.com/webprogramming260/simon-css"> Source </a>
+            </div>
         </footer>
+
     </body>
+
 </html>
