--- a/index.html
+++ b/index.html
@@ -42,12 +42,16 @@
 
 
         <main class="container-fluid bg-secondary text-center">
-            <div>
-                <h1>Login</h1>
-                <form method="get" action="play.html">
+            <div class="bg-dark border border-primary rounded-4" id="login">
+                <div class="d-flex justify-content-center align-items-center">
+                    <h1>Login</h1>
+                </div>
+                <div class="d-flex justify-content-center align-items-center"></div>
+                    <form method="get" action="play.html">
                     <input type ="text" id="name" placeholder="Username">
                     <button type="submit" class="btn btn-primary">Login</button>
                 </form>
+                </div>
             </div>
         </main>
 
@@ -60,5 +64,4 @@
         </footer>
 
     </body>
-    
 </html>
