--- a/about.html
+++ b/about.html
@@ -5,31 +5,62 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Nate's Simon</title>
         <link rel="icon" href="./favicon.ico" />
+
+        <link rel="stylesheet" href="main.css" />
+
+        <!-- Include bootstrap CSS framework -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+            crossorigin="anonymous"
+        />
     </head>
-    <body>
-        <header>
-            <nav>
-                <a href="./">Home</a> |
-                <a href="./play.html">Play</a> |
-                <a href="./scores.html">Score Board</a> |
-                <a href="./about.html">About</a>
+
+    <body class="bg-dark text-light">
+    
+        <header class="container-fluid">
+            <nav class="navbar fixed-top navbar-dark">
+              <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
+              <menu class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                     <a class="nav-link" href="play.html">Play</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="scores.html">Scores</a>
+                </li>
+                <li class="nav-item">
+                     <a class="nav-link active" href="about.html">About</a>
+                </li>
+              </menu>
             </nav>
-            <h1>Simon Says</h1>
-        </header>
+          </header>
 
-        <main>
-            <hr/>
-            <h2> About </h2>
-            <p>Simon is a repetitive memory game where you follow the demonstrated color sequence until you make a mistake. The longer the sequence you repeat, the greater your score.</p>
 
-            <p>The name Simon is a registered trademark owned by Milton-Bradley. Our use of the name and the game is for non-profit educational use only. No part of this code or program should be used outside of that definition.</p>
+        <main class="container-fluid bg-secondary text-center">
+            <div>
+                <p>
+                    Simon is a repetitive memory game where you follow the demonstrated color sequence
+                    until you make a mistake. The longer the sequence you repeat, the greater your score.
+                </p>
+                <p>
+                    The name Simon is a registered trademark owned by Milton-Bradley. 
+                    Our use of the name and the game is for non-profit educational use only.
+                    No part of this code or program should be used outside of that definition.
+                </p>
+            </div>
         </main>
 
-        <footer>
-            <hr/>
-            <span>Author(s) </span>
-            <br/>
-            <a href="https://github.com/n8petersen/simon">GitHub</a>
+
+        <footer class="bg-dark text-dark text-muted">
+            <div class="container-fluid">
+                <span class="text-reset">Nathan Petersen</span>
+                <a class="text-reset" href="https://github.com/webprogramming260/simon-css"> Source </a>
+            </div>
         </footer>
+
     </body>
 </html>
