--- a/play.html
+++ b/play.html
@@ -62,7 +62,7 @@
         <footer class="bg-dark text-dark text-muted">
             <div class="container-fluid">
                 <span class="text-reset">Nathan Petersen</span>
-                <a class="text-reset" href="https://github.com/webprogramming260/simon-css"> Source </a>
+                <a class="text-reset" href="https://github.com/n8petersen/simon"> Source </a>
             </div>
         </footer>
 
