Redesigned file structure to organize by type

--- a/html/play.html
+++ b/html/play.html
@@ -6,7 +6,7 @@
         <title>Nate's Simon</title>
         <link rel="icon" href="./favicon.ico" />
 
-        <link rel="stylesheet" href="main.css" />
+        <link rel="stylesheet" href="../main.css" />
 
         <!-- Include bootstrap CSS framework -->
         <link
@@ -19,19 +19,18 @@
 
 
     <body class="bg-dark text-light">
-    
         <header class="container-fluid">
             <nav class="navbar fixed-top navbar-dark">
               <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
               <menu class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="../">Home</a>
                 </li>
                 <li class="nav-item">
-                     <a class="nav-link" href="play.html">Play</a>
+                     <a class="nav-link active" href="play.html">Play</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="scores.html">Scores</a>
+                    <a class="nav-link" href="scores.html">Scores</a>
                 </li>
                 <li class="nav-item">
                      <a class="nav-link" href="about.html">About</a>
@@ -40,34 +39,25 @@
             </nav>
           </header>
 
-
-        <main class="container-fluid bg-secondary text-center">
-            <table class="table table-warning table-striped-columns">
-                <thead class="table-dark">
-                    <tr>
-                        <th>#</th>
-                        <th>Name</th>
-                        <th>Score</th>
-                        <th>Date</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Богдан Великий</td>
-                        <td>100</td>
-                        <td>10/1/2010</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>some dude</td>
-                        <td>5</td>
-                        <td>12/1/2022</td>
-                    </tr>
-                </tbody>
-            </table>
-        </main>
-
+          <main class="bg-secondary">
+            <div class="players">
+              Player:
+              <span class="player-name">Guest</span>
+            </div>
+            <div class="game">
+              <div class="button-container">
+                <button class="button-top-left"></button>
+                <button class="button-top-right"></button>
+                <button class="button-bottom-left"></button>
+                <button class="button-bottom-right"></button>
+                <div class="controls center">
+                  <div class="game-name">Simon<sup>&reg;</sup></div>
+                  <div class="score center">--</div>
+                  <button class="btn btn-primary">Reset</button>
+                </div>
+              </div>
+            </div>
+          </main>
 
         <footer class="bg-dark text-dark text-muted">
             <div class="container-fluid">
