--- a/html/about.html
+++ b/html/about.html
@@ -6,7 +6,7 @@
         <title>Nate's Simon</title>
         <link rel="icon" href="./favicon.ico" />
 
-        <link rel="stylesheet" href="main.css" />
+        <link rel="stylesheet" href="../main.css" />
 
         <!-- Include bootstrap CSS framework -->
         <link
@@ -17,47 +17,43 @@
         />
     </head>
 
-
     <body class="bg-dark text-light">
+    
         <header class="container-fluid">
             <nav class="navbar fixed-top navbar-dark">
               <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
               <menu class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="../">Home</a>
                 </li>
                 <li class="nav-item">
-                     <a class="nav-link active" href="play.html">Play</a>
+                     <a class="nav-link" href="play.html">Play</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="scores.html">Scores</a>
                 </li>
                 <li class="nav-item">
-                     <a class="nav-link" href="about.html">About</a>
+                     <a class="nav-link active" href="about.html">About</a>
                 </li>
               </menu>
             </nav>
           </header>
 
-          <main class="bg-secondary">
-            <div class="players">
-              Player:
-              <span class="player-name">Guest</span>
+
+        <main class="container-fluid bg-secondary text-center">
+            <div>
+                <p>
+                    Simon is a repetitive memory game where you follow the demonstrated color sequence
+                    until you make a mistake. The longer the sequence you repeat, the greater your score.
+                </p>
+                <p>
+                    The name Simon is a registered trademark owned by Milton-Bradley. 
+                    Our use of the name and the game is for non-profit educational use only.
+                    No part of this code or program should be used outside of that definition.
+                </p>
             </div>
-            <div class="game">
-              <div class="button-container">
-                <button class="button-top-left"></button>
-                <button class="button-top-right"></button>
-                <button class="button-bottom-left"></button>
-                <button class="button-bottom-right"></button>
-                <div class="controls center">
-                  <div class="game-name">Simon<sup>&reg;</sup></div>
-                  <div class="score center">--</div>
-                  <button class="btn btn-primary">Reset</button>
-                </div>
-              </div>
-            </div>
-          </main>
+        </main>
+
 
         <footer class="bg-dark text-dark text-muted">
             <div class="container-fluid">
