--- a/html/scores.html
+++ b/html/scores.html
@@ -6,7 +6,7 @@
         <title>Nate's Simon</title>
         <link rel="icon" href="./favicon.ico" />
 
-        <link rel="stylesheet" href="main.css" />
+        <link rel="stylesheet" href="../main.css" />
 
         <!-- Include bootstrap CSS framework -->
         <link
@@ -17,6 +17,7 @@
         />
     </head>
 
+
     <body class="bg-dark text-light">
     
         <header class="container-fluid">
@@ -24,16 +25,16 @@
               <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
               <menu class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="../">Home</a>
                 </li>
                 <li class="nav-item">
                      <a class="nav-link" href="play.html">Play</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="scores.html">Scores</a>
+                    <a class="nav-link active" href="scores.html">Scores</a>
                 </li>
                 <li class="nav-item">
-                     <a class="nav-link active" href="about.html">About</a>
+                     <a class="nav-link" href="about.html">About</a>
                 </li>
               </menu>
             </nav>
@@ -41,17 +42,30 @@
 
 
         <main class="container-fluid bg-secondary text-center">
-            <div>
-                <p>
-                    Simon is a repetitive memory game where you follow the demonstrated color sequence
-                    until you make a mistake. The longer the sequence you repeat, the greater your score.
-                </p>
-                <p>
-                    The name Simon is a registered trademark owned by Milton-Bradley. 
-                    Our use of the name and the game is for non-profit educational use only.
-                    No part of this code or program should be used outside of that definition.
-                </p>
-            </div>
+            <table class="table table-warning table-striped-columns">
+                <thead class="table-dark">
+                    <tr>
+                        <th>#</th>
+                        <th>Name</th>
+                        <th>Score</th>
+                        <th>Date</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Богдан Великий</td>
+                        <td>100</td>
+                        <td>10/1/2010</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>some dude</td>
+                        <td>5</td>
+                        <td>12/1/2022</td>
+                    </tr>
+                </tbody>
+            </table>
         </main>
 
 
