--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
               <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
               <menu class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Home</a>
+                    <a class="nav-link active" href="./">Home</a>
                 </li>
                 <li class="nav-item">
-                     <a class="nav-link" href="play.html">Play</a>
+                     <a class="nav-link" href="./html/play.html">Play</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="scores.html">Scores</a>
+                    <a class="nav-link" href="./html/scores.html">Scores</a>
                 </li>
                 <li class="nav-item">
-                     <a class="nav-link" href="about.html">About</a>
+                     <a class="nav-link" href="./html/about.html">About</a>
                 </li>
               </menu>
             </nav>
@@ -47,7 +47,7 @@
                     <h1>Login</h1>
                 </div>
                 <div class="d-flex justify-content-center align-items-center"></div>
-                    <form method="get" action="play.html">
+                    <form method="get" action="./html/play.html">
                     <input type ="text" id="name" placeholder="Username">
                     <button type="submit" class="btn btn-primary">Login</button>
                 </form>
