--- a/html/play.html
+++ b/html/play.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Nate's Simon</title>
-        <link rel="icon" href="./favicon.ico" />
 
+        <link rel="icon" href="./favicon.ico" />
         <link rel="stylesheet" href="../main.css" />
 
         <!-- Include bootstrap CSS framework -->
@@ -42,18 +42,18 @@
           <main class="bg-secondary">
             <div class="players">
               Player:
-              <span class="player-name">Guest</span>
+              <span class="player-name"></span>
             </div>
             <div class="game">
               <div class="button-container">
-                <button class="button-top-left"></button>
-                <button class="button-top-right"></button>
-                <button class="button-bottom-left"></button>
-                <button class="button-bottom-right"></button>
+                <button id="green" class="game-button button-top-left" onclick="game.pressButton(this)"></button>
+                <button id="red" class="game-button button-top-right" onclick="game.pressButton(this)"></button>
+                <button id="yellow" class="game-button button-bottom-left" onclick="game.pressButton(this)"></button>
+                <button id="blue" class="game-button button-bottom-right" onclick="game.pressButton(this)"></button>
                 <div class="controls center">
                   <div class="game-name">Simon<sup>&reg;</sup></div>
-                  <div class="score center">--</div>
-                  <button class="btn btn-primary">Reset</button>
+                  <div id="score" class="score center">--</div>
+                  <button class="btn btn-primary" onclick="game.reset()">Reset</button>
                 </div>
               </div>
             </div>
@@ -65,6 +65,8 @@
                 <a class="text-reset" href="https://github.com/n8petersen/simon"> Source </a>
             </div>
         </footer>
+
+        <script src="../js/play.js"></script>
 
     </body>
 </html>
