Score Board is working :)

--- a/html/scores.html
+++ b/html/scores.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Nate's Simon</title>
-        <link rel="icon" href="./favicon.ico" />
 
+        <link rel="icon" href="./favicon.ico" />
         <link rel="stylesheet" href="../main.css" />
 
         <!-- Include bootstrap CSS framework -->
@@ -51,20 +51,7 @@
                         <th>Date</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Богдан Великий</td>
-                        <td>100</td>
-                        <td>10/1/2010</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>some dude</td>
-                        <td>5</td>
-                        <td>12/1/2022</td>
-                    </tr>
-                </tbody>
+                <tbody id="scores"> </tbody>
             </table>
         </main>
 
@@ -75,6 +62,8 @@
                 <a class="text-reset" href="https://github.com/n8petersen/simon"> Source </a>
             </div>
         </footer>
+
+        <script src="../js/scores.js"></script>
 
     </body>
 </html>
