--- a/public/html/play.html
+++ b/public/html/play.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Nate's Simon</title>
 
-        <link rel="icon" href="./favicon.ico" />
+        <link rel="icon" href="../favicon.ico" />
         <link rel="stylesheet" href="../main.css" />
 
         <!-- Include bootstrap CSS framework -->
