Added user authentication

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -7,8 +7,8 @@
         <link rel="icon" href="../favicon.ico" />
 
         <script src="../js/about.js"> </script>
-        <link rel="stylesheet" href="../main.css" />
-        <link rel="stylesheet" href="../about.css" />
+        <link rel="stylesheet" href="../css/main.css" />
+        <link rel="stylesheet" href="../css/about.css" />
 
         <!-- Include bootstrap CSS framework -->
         <link
