--- a/public/html/play.html
+++ b/public/html/play.html
@@ -6,7 +6,7 @@
         <title>Nate's Simon</title>
 
         <link rel="icon" href="../favicon.ico" />
-        <link rel="stylesheet" href="../main.css" />
+        <link rel="stylesheet" href="../css/main.css" />
 
         <!-- Include bootstrap CSS framework -->
         <link
