--- a/public/index.html
+++ b/public/index.html
@@ -1,68 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Nate's Simon</title>
 
-        <script src="./js/login.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nate's Simon</title>
 
-        <link rel="icon" href="./favicon.ico" />
-        <link rel="stylesheet" href="main.css" />
+  <script src="./js/login.js"></script>
 
-        <!-- Include bootstrap CSS framework -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-            crossorigin="anonymous"
-        />
-    </head>
+  <link rel="icon" href="./favicon.ico" />
+  <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="./css/login.css" />
+
+  <!-- Include bootstrap CSS framework -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+</head>
 
 
-    <body class="bg-dark text-light">
-    
-        <header class="container-fluid">
-            <nav class="navbar fixed-top navbar-dark">
-              <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
-              <menu class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" href="./">Home</a>
-                </li>
-                <li class="nav-item">
-                     <a class="nav-link" href="./html/play.html">Play</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./html/scores.html">Scores</a>
-                </li>
-                <li class="nav-item">
-                     <a class="nav-link" href="./html/about.html">About</a>
-                </li>
-              </menu>
-            </nav>
-          </header>
+<body class="bg-dark text-light">
+
+  <header class="container-fluid">
+    <nav class="navbar fixed-top navbar-dark">
+      <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
+      <menu class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" href="./">Home</a>
+        </li>
+      </menu>
+    </nav>
+  </header>
 
 
-        <main class="container-fluid bg-secondary text-center">
-            <div class="bg-dark border border-primary rounded-4" id="login">
-                <div class="d-flex justify-content-center align-items-center">
-                    <h1>Login</h1>
-                </div>
-                <div class="d-flex justify-content-center align-items-center"></div>
-                    <input type ="text" id="name" placeholder="Username">
-                    <button class="btn btn-primary" onclick="login()">Login</button>
-                </form>
-                </div>
-            </div>
-        </main>
+  <main class="container-fluid bg-secondary text-center">
+
+    <div class="bg-dark border border-primary rounded-4" id="login">
+      <h1>Welcome to Simon</h1>
+      <!-- Displayed when needing authentication -->
+      <div id="loginControls" style="display: none">
+        <div class="input-group mb-3">
+          <span class="input-group-text">@</span>
+          <input class="form-control" type="text" id="userName" placeholder="your@email.com" />
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text">🔒</span>
+          <input class="form-control" type="password" id="userPassword" placeholder="password" />
+        </div>
+        <button type="button" class="btn btn-primary" onclick="loginUser()">
+          Login
+        </button>
+        <button type="button" class="btn btn-primary" onclick="createUser()">
+          Create
+        </button>
+      </div>
+      <!-- Displayed when ready to play -->
+      <div id="playControls" style="display: none">
+        <div id="playerName"></div>
+        <button type="button" class="btn btn-primary" onclick="play()">
+          Play
+        </button>
+        <button type="button" class="btn btn-secondary" onclick="logout()">
+          Logout
+        </button>
+      </div>
+    </div>
+
+    <!-- Error dialog -->
+    <div class="modal fade" id="msgModal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content text-dark">
+          <div class="modal-body">error message here</div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </main>
 
 
-        <footer class="bg-dark text-dark text-muted">
-            <div class="container-fluid">
-                <span class="text-reset">Nathan Petersen</span>
-                <a class="text-reset" href="https://github.com/n8petersen/simon"> Source </a>
-            </div>
-        </footer>
+  <footer class="bg-dark text-dark text-muted">
+    <div class="container-fluid">
+      <span class="text-reset">Nathan Petersen</span>
+      <a class="text-reset" href="https://github.com/n8petersen/simon"> Source </a>
+    </div>
+  </footer>
 
-    </body>
+  <script src="./js/login.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+
+</body>
+
 </html>
