--- a/public/html/scores.html
+++ b/public/html/scores.html
@@ -48,7 +48,7 @@
                         <th>#</th>
                         <th>Name</th>
                         <th>Score</th>
-                        <th>Date</th>
+                        <th>Date/Time</th>
                     </tr>
                 </thead>
                 <tbody id="scores"> </tbody>
